@@ -89,6 +89,11 @@ public class SecurityConfiguracao {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuracao = new CorsConfiguration();
+
+        // Para desenvolvimento, permitir qualquer origem
+        // configuracao.setAllowCredentials(false); // Desabilitar credentials para permitir "*"
+        // configuracao.setAllowedOrigins(Arrays.asList("*")); // Permitir todas as origens em desenvolvimento
+
         configuracao.setAllowCredentials(true);
         configuracao.setAllowedHeaders(List.of("*"));
         configuracao.setExposedHeaders(List.of("*"));
@@ -103,7 +108,9 @@ public class SecurityConfiguracao {
                         HttpMethod.OPTIONS.name(),
                         HttpMethod.HEAD.name(),
                         HttpMethod.TRACE.name()));
-        configuracao.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION));
+        configuracao.setAllowedHeaders(Arrays.asList("*")); // Permite todos os headers
+        configuracao.setExposedHeaders(Arrays.asList("*")); // Expõe todos os headers
+        configuracao.setMaxAge(3600L); // Cache de preflight
 
         UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
         origem.registerCorsConfiguration("/**", configuracao);
